fetching_details component added and gave fix width to griditem

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,18 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbs5jf5xg1pDmXXdHt5t8iYqOr5BzcaRJTE1Mqt4wD80YY9U/6Ff2Bvq1mI8fD0n"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -62,5 +74,15 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-bqBj6mf5TDD2cpSSzksBOM2g9CeZUp3r+3R2JiSd5oI6PAPdAJW8PbKyO5NbobG0"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-lZSTUJ5nxVocBM4bqGzHoZR2SZx8fNDeztdAq7RviR5Uu4s/DxapweFO7oBquZUz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
